<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/prefsCategoryTweaks"
        app:iconSpaceReserved="true"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

        <ListPreference
            android:key="progressBarLocation"
            android:title="@string/prefsProgressBarAlignmentTitle"
            app:useSimpleSummaryProvider="true"
            app:singleLineTitle="false"
            android:defaultValue="center"
            app:entries="@array/progressBarLocation"
            app:entryValues="@array/progressBarLocationValues"
            app:icon="@drawable/ic_alignment"
            app:negativeButtonText=""/>

        <SeekBarPreference
            android:key="circularProgressBarSize"
            android:title="@string/prefsProgressBarSizeTitle"
            android:summary="@string/prefsProgressBarSizeSummary"
            app:singleLineTitle="false"
            android:defaultValue="7"
            android:max="14"
            app:icon="@drawable/ic_size"/>

        <SeekBarPreference
            android:key="circularProgressBarMarginTop"
            android:title="@string/prefsProgressBarMarginTopTitle"
            android:summary="@string/prefsProgressBarMarginTopSummary"
            app:singleLineTitle="false"
            android:defaultValue="7"
            android:max="14"
            app:icon="@drawable/ic_margin_top"/>

        <SeekBarPreference
            android:key="circularProgressBarMarginLeft"
            android:title="@string/prefsProgressBarMarginLeftTitle"
            android:summary="@string/prefsProgressBarMarginLeftSummary"
            app:singleLineTitle="false"
            android:defaultValue="7"
            android:max="14"
            app:icon="@drawable/ic_margin_left"/>

        <SeekBarPreference
            android:key="circularProgressBarMarginRight"
            android:title="@string/prefsProgressBarMarginRightTitle"
            android:summary="@string/prefsProgressBarMarginRightSummary"
            app:singleLineTitle="false"
            android:defaultValue="7"
            android:max="14"
            app:icon="@drawable/ic_margin_right"/>

        <SwitchPreferenceCompat
            android:key="onlyInPortrait"
            android:title="@string/prefsCircularBarOnlyPortraitTitle"
            android:summary="@string/prefsCircularBarOnlyPortraitSummary"
            app:singleLineTitle="false"
            android:defaultValue="false"
            app:icon="@drawable/ic_linear_progress_bar"/>

    </PreferenceCategory>
</PreferenceScreen>